# wayfire-better-tiling

./: .gitignore  LICENSE  PKGBUILD  README.md  build.sh  meson.build
metadata/: better-tile.xml  better-tiling.xml  meson.build
src/: crossfade.hpp  meson.build  tile-plugin.cpp  tree-controller.cpp  tree-controller.hpp  tree.cpp  tree.hpp
